--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -101,6 +101,19 @@ tbody td {
   border: rgb(0, 0, 0.1) solid 1px;
   border-radius: 100px;
 }
+.add-edit-board {
+  display: flex;
+  margin: 10px;
+  height: 30px;
+
+  align-items: center;
+  justify-content: right;
+}
+.add-edit-board input {
+  margin: 25px;
+  height: 30px;
+  width: 350px;
+}
 .board {
   width: 95%;
   margin: 0px 0 30px 30px;
@@ -109,16 +122,17 @@ tbody td {
   border-radius: 5px;
 }
 
-.editButton a {
-  text-decoration: none;
-  font-size: 14px;
-  color: rgb(20, 53, 195);
-}
-.editButton a:hover {
-  background-color: blue;
+.adminButton {
+  height: 25px;
+  width: 40px;
+  background-color: rgb(20, 53, 195);
   color: white;
-  font-size: 2rem;
 }
+.adminButton:hover {
+  background-color: rgb(200, 140, 205);
+  cursor: pointer;
+}
+
 
 #AccountDisplay {
   display: none;
