--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,6 +116,27 @@
   color: var(--white-color);
 }
 
+.header__cart-notice{
+  position: absolute;
+  padding: 1px 4px;
+  font-size: 1.4rem;
+  top: 15px;
+  left: 25px;
+  line-height: 1.2rem;
+  border-radius: 10px;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+}
+
+.header__cart-totalCost{
+  position: absolute;
+  font-size: 1.2rem;
+  font-weight: bold;
+  right: 15px;
+  top: 10px;
+  
+}
+
 .header__notify, /*Notify*/
 .header__cart, /*Cart*/
 .header__user {
@@ -969,3 +990,15 @@
   padding: 0 16px;
   width: 33.3333%;
 } 
+
+.footer__nav{
+  font-size: 1.2rem;
+  text-decoration: none;
+  display: block;
+  padding: 4px 8px;
+  color: var(--text-color);
+}
+
+.footer__nav:hover {
+  color: var(--primary-color);
+}
