--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -438,7 +438,7 @@
   display: none;
   position: absolute;
   width: 350px;
-  height: auto;
+  height: 350px;
   top: 75%;
   right: 12px;
   background-color: var(--white-color);
@@ -449,7 +449,7 @@
   z-index: 1;
   border-radius: 8px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  overflow: scroll;
   box-shadow: 0 1px 5px rgb(182, 182, 182);
 }
 
